# pokerengine

./: .gitignore  .travis.yml  AUTHORS  ChangeLog  Makefile.am  Makefile.cygwin  NEWS  README  README.md  bootstrap  configure.ac  poker-engine.pc.in  pokerconfigupgrade  pokerconfigupgrade.8.in  pokerconfigupgrade.in  setup.cfg  setup.py
conf/: Makefile  ante-limit.template  build.sh  limit.template  no-limit-levels-ante-blind-fixed.template  no-limit-levels-blind-ante.template  no-limit-levels-blind.template  no-limit.template  poker..01-.02-no-limit.xml  poker..01-.02-pot-limit.xml  poker..02-.04-limit.xml  poker..02-.04-no-limit.xml  poker..02-.04-pot-limit.xml  poker..02..04-limit.xml  poker..05-.10-limit.xml  poker..05-.10-no-limit.xml  poker..05-.10-pot-limit.xml  poker..05..10-limit.xml  poker..10-.25-limit.xml  poker..10-.25-no-limit.xml  poker..10-.25-pot-limit.xml  poker..25-.50-limit.xml  poker..25-.50-no-limit.xml  poker..25-.50-pot-limit.xml  poker..25..50-limit.xml  poker..50-1-limit.xml  poker..50-1-no-limit.xml  poker..50-1-pot-limit.xml  poker..50.1-limit.xml  poker.0-0-limit.xml  poker.1-2-limit.xml  poker.1-2-no-limit.xml  poker.1-2-pot-limit.xml  poker.1-2_10-100_1000-pokermania.xml  poker.10-15-limit.xml  poker.10-15-pot-limit.xml  poker.10-20-limit.xml  poker.10-20-no-limit.xml  poker.10-20-pot-limit.xml  poker.100-200-limit.xml  (+91 more)
debian/: changelog  control  control.breezy  control.dapper  control.edgy  control.hardy  control.hoary  control.lenny  control.sarge  control.unstable  copyright  install  postinst  preinst  python-poker-engine.dirs  python-poker-engine.install  python-poker-engine.manpages  python-poker-engine.postinst  python-poker-engine.postrm  python-poker-engine.preinst  python.dirs  python.docs  python.install  python2.3-poker-engine.dirs  python2.3-poker-engine.docs  rules  rules.mk
examples/: simple.py
gentoo/dev-games/poker-engine/: poker-engine-1.0.14-r1.ebuild  poker-engine-1.0.16-r1.ebuild  poker-engine-1.0.20-r1.ebuild  poker-engine-1.0.22-r1.ebuild
po/: Makefile  Makefile.am  POTFILES.in  bg.po  bg_BG.po  da.po  de.po  en.po  en_CA.po  en_US.po  es.po  fi.po  fr.po  fr_BE.po  fr_CA.po  fr_FX.po  it.po  nb.po  nl.po  poker-engine.pot  pt.po  raw.string  sv.po
pokerengine/: Makefile.am  __init__.py  config.py  pokercards.py  pokerchips.py  pokerengineconfig.py  pokergame.py  pokerprizes.py  pokerrake.py  pokertournament.py  version.py
tests/: Makefile.am  __init__.py  allin.py  allin.py.in  blinds.py  blinds.py.in  bugs.py.in  buyin.py  buyin.py.in  chips.py  chips.py.in  deal.py  deal.py.in  eval.py  eval.py.in  history.py  history.py.in  libxml2leak.py.in  log_history.py  muck.py.in  positions.py  positions.py.in  run.in  sit.py  sit.py.in  test-all.py.in  test-game.py.in  test-gamehistory.py.in  test-i18n.py.in  test-pokercards.py.in  test-pokerchips.py.in  test-pokerengineconfig.py.in  test-pokerplayer.py.in  test-pokerprizes.py.in  test-pokerrake.py.in  test-pokertournament.py.in  test-version.py.in  test_allin.py  test_blinds.py  test_buyin.py  (+25 more)
tests/conf/: poker..02-.04-limit.xml  poker..02-.04-no-limit.xml  poker..02-.04-pot-limit.xml  poker..02..04-limit.xml  poker..05-.10-no-limit.xml  poker..05-.10-pot-limit.xml  poker..10-.25-limit.xml  poker..25-.50-no-limit.xml  poker..25-.50-pot-limit.xml  poker..25..50-limit.xml  poker..50-1-no-limit.xml  poker..50-1-pot-limit.xml  poker..50.1-limit.xml  poker.0-0-limit.xml  poker.10-20-no-limit.xml  poker.10-20-pot-limit.xml  poker.100-200-no-limit.xml  poker.150-300-limit.xml  poker.2-4-limit.xml  poker.2-4-pot-limit.xml  poker.200-400-limit.xml  poker.3-6-limit.xml  poker.30-60-limit.xml  poker.30-60-no-limit.xml  poker.30-60-pot-limit.xml  poker.5-10-pot-limit.xml  poker.50-100-limit.xml  poker.50-100-no-limit.xml  poker.7stud.xml  poker.ante-.10-.20-limit.xml  poker.ante-.25-.50-limit.xml  poker.ante-1-2-limit.xml  poker.ante-2-4-limit.xml  poker.ante-3-6-limit.xml  poker.holdem.xml  poker.level-10-15-pot-limit.xml  poker.level-10-20-no-limit.xml  poker.level-15-30-no-limit.xml  poker.level-2-4-limit.xml  poker.level-no-limit.xml  (+6 more)
tests/test-data/: pokerrake.py
tests/test-data/conf/: unittest.config.invalid.xml  unittest.config.template.xml  unittest.levels.template.xml  unittest.variant.template.xml
tests/test-data/upgrade/: unittest.config.invalid.xsl  unittest.config.template.xsl
upgrades/: 1.0.5-1.0.6.xsl
